# GRAD-SCOPE

./: .gitignore  README.md  detectors.py  drift.py  requirements.txt  standin.py  test_detectors.py  test_drift.py  test_gate.py
.claude/skills/adaptyv/: .openskills.json
.claude/skills/aeon/: .openskills.json
.claude/skills/anndata/: .openskills.json
.claude/skills/arbor/: .openskills.json
.claude/skills/arboreto/: .openskills.json
.claude/skills/astropy/: .openskills.json
.claude/skills/autoskill/: .openskills.json
.claude/skills/benchling-integration/: .openskills.json
.claude/skills/bgpt-paper-search/: .openskills.json
.claude/skills/bids/: .openskills.json
.claude/skills/biopython/: .openskills.json
.claude/skills/bioservices/: .openskills.json
.claude/skills/bulk-rnaseq/: .openskills.json
.claude/skills/cellxgene-census/: .openskills.json
.claude/skills/cirq/: .openskills.json
experiments/: __init__.py  baseline.py  run_experiment.py
grader-drift-pipeline/: drift.py  evaluate.py  gate.py  gate_config.json  requirements.txt  test_drift.py
grader-drift-pipeline/results/: gate_calibration.md  steps_blur.csv  steps_colortemp.csv
gradscope-mcp/: README.md  analysis.py  pyproject.toml  server.py
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
logger/: __init__.py  gradient_logger.py  layer_classifier.py  lead_time.py
models/: __init__.py  resnet20.py  vgg11.py
results/: gate_history.csv  report.md  steps_dust.csv  steps_lighting.csv  summary.json
(+135 files in other folders)
